Fixes settings icon spacing on mobile

--- a/styles.css
+++ b/styles.css
@@ -156,3 +156,21 @@ footer {
 .footer {
     cursor: default;
 }
+
+@media only screen and (min-width: 320px) {
+    /*For mobile-size screens*/
+    body {
+        display: grid;
+        grid-template-rows: 100px minmax(0, 1fr) 50px;
+    }
+
+    .settingsContainer {
+        align-self: flex-end;
+        margin-top: 40px;
+        margin-bottom: 20px;
+        margin-right: 20px;
+        transition: 0.9s;
+        cursor: pointer;
+        transform-origin: 50% 43%;
+    }
+}
